<resources>
    <string name="app_name">Vienna Cop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gps_message">Um dieses Spiel zu spielen, muss  GPS aktiv sein. Möchtest du es jetzt einschalten?</string>
    <string name="gps_on">Ja, einschalten</string>
    <string name="gps_off">Nein, beenden</string>
    <string name="welcome_first_start">Willkommen bei Vienna Cop! Bitte Daten eingeben, auf Start drücken und schon geht deine
         Polizeikarriere in Wien los!</string>
	<string name="welcome_msg_first_case">Guten Tag, Police Officer %1$s. Willkommen im Dienst. Ich habe eine gute und eine schlechte Nachricht für Sie.
	Die Gute: Ihnen wird es bei uns gefallen. Die Schlechte: Sie müssen jetzt los, Ihre neue Kollegen erwarten Sie schon am Tatort. Ich wünsche Ihnen
	für Ihren 1. Fall und die weitere Laufbahn alles Gute!</string>
    <string name="welcome_msg_next_case">Hallo, Police Officer %1$s. Wir haben einen neuen Fall für Sie. Die Kollegen warten bereits am Tatort. Viel Erfolg!</string>
	<string name="welcomeback_msg">Willkommen zurück, Police Officer %1$s. Schön Sie wiederzusehen. %2$s. Bereit den Fall wieder aufzunehmen? Viel Erfolg!</string>
    <string name="action_tatort">Ihre Kollegen erwarten Sie am Tatort mit neuen Informationen</string>
    <string name="action_hints">Ein Täter konnte anhand der ermittelten Hinweise bislang noch nicht ausgeforscht werden</string>
    <string name="crime_scene1">Hallo! Wir haben es hier mit einem Mordfall zu tun. Die Leiche weißt mehrere Einstiche auf, wir haben sie bereits ins Krankenhaus 
	zur Autopsie gebracht. Wir konnten bereits etwas in Erfahrung bringen. Ich würde Ihnen als nächstes raten, die Obduktionsergebnisse zu untersuchen. Viel Erfolg bei dem Fall!</string>
	<string name="crime_scene2">Hallo! Hier wo Sie stehen gab es vor Kurzem eine Schießerei mit mehreren Toten. Mehrere Täter sind durch den angrenzenden Park
	geflohen, deswegen würde ich vorschlagen, dass Sie dort mit Ihren Untersuchungen beginnen! Eine erste heiße Spur haben wir bereits.</string>
    <string name="weapon_location1">Guten Tag! Wir haben hier die Tatwaffe für Sie. Wollen Sie diese nun untersuchen und weitere Hinweise erhalten?</string>
    <string name="weapon_location2">Hallo. Die Tatwaffe wurde noch nicht untersucht. Möchten Sie eine Untersuchung veranlassen?</string>
    <string name="weapon_location_visited">Willkommen zurück. Es konnten leider keine weiteren Hinweise ermittelt werden.</string>
	<string name="police_investigation1">Willkommen Kollege/Kollegin. Ich schätze Sie wollen die Überwachungsbänder des aktuellen Falles untersuchen? 
	Ich empfehle Ihnen, sich entweder auf den Täter oder den Fluchtweg zu konzentrieren! Was wollen Sie tun?</string>
	<string name="police_investigation2">Hallo. Wir wurden bereits informiert dass Sie kommen und haben die Überwachungsbänder vorbereitet. Es wäre sinnvoll, 
	sich entweder den Tathergang genauer anzuschauen, oder die Flucht des Täters genauer zu betrachten.</string>
	<string name="hospital_investigation1">Guten Tag. Sie kommen wegen dem Mordfall? Wir haben die Leiche bereits obduziert, hier haben Sie die Ergebnisse:</string>
	<string name="hospital_investigation2">Wie kann ich Ihnen helfen? Kommen Sie wegen den Toten bei der Schießerei? Sie haben Glück, die Obduktion wird gerade 
	abgeschlossen, Sie können in Kürze die Ergebnisse studieren.</string>
	<string name="subway_investigation1">Hi. Sie kommen um die Überwachungskameras zu kontrollieren? Ich werde Ihnen helfen, wir können also gleich anfangen. 
	Lassen Sie uns herausfinden, wohin der Täter geflohen ist.</string>
	<string name="subway_investigation2">Hallo, ich habe Sie bereits erwartet. Sie kommen wegen den Überwachungsbändern, oder? Hier, sie sind bereit zur Überprüfung.
	Sehen wir uns doch an, in welche Richtung der Verdächtige verschwunden ist.</string>
	<string name="park_investigation1">Hallo Kollege/Kollegin. Durch diesen Park ist der Täter geflüchtet und wurde dabei von mehreren Personen gesehen. Sie haben 
	nun die Möglichkeit, diese Leute zu befragen und herauszufinden, wie der Täter in etwa aussieht.</string>
	<string name="park_investigation2">Guten Tag. Sie kommen wegen der Befragung der Zeugen? Mehrere Personen haben Täter aus der Nähe gesehen, Sie werden also mit 
	Sicherheit Hinweise auf das Aussehen des Täters herausfinden können.</string>
    <string name="no_investigation">Willkommen. Wir können Ihnen ohne Untersuchung des Tatorts leider nicht behilflich sein.</string>
    <string name="new_hint_explanation">Wählen Sie aus, nach welchen Hinweisen Sie suchen wollen</string>
	<string name="suspect_selection">Werter Kollege, wir haben hier die Verdächtigen versammelt. Wenn Sie genügend Hinweise gesammelt haben um den Täter 
	 identifizieren zu können wählen Sie ihn bitte aus. Falls nicht schlage ich vor dass Sie noch etwas weiterforschen.</string>
	<string name="hint_feature1">Durch deine Nachforschungen konntest du folgendes Merkmal des Täters in Erfahrung bringen:</string>
	<string name="hint_feature2">Durch die intensive Untersuchung war es dir möglich, folgendes Aussehensmerkmal des Täters herauszufinden:</string>
	<string name="hint_weapon">Die Obduktionsergebnisse haben ergeben dass es sich um eine ganz bestimmte Tatwaffe handeln muss. Mit den Hinweisen die bereits
	gesammelt wurden konnte die Tatwaffe lokalisiert werden!</string>
	<string name="hint_map">Die Untersuchung der Überwachungsbändern hat ergeben dass sich der Täter in folgendem Bereich aufhält</string>
    <string name="char_name">charName</string>
    <string name="char_face">charFace</string>
    <string name="char_gender">charGender</string>
    <string name="first_start">firstStart</string>
    <string name="mapProgress">0/3</string>
    <string name="featureProgress">0/5</string>
    <string name="weaponProgress">0/1</string>
    <string name="send_collegue_start">READY</string>
    <string name="send_colleague_desc">Wähle den Ort an dem dein Kollege nach Hinweisen suchen soll.</string>
    <string name="send_colleague_impossible">Ihr Kollege kann erst nach der Untersuchung des Tatorts Hinweise beschaffen.</string>
    <string name="send_collegue_really">Möchtest du deinen Kollegen nach einem der folgenden Hinweise suchen lassen?</string>
    <string name="send_colleague_working_msg">Dein Kollege wird an dieser Stelle seine Untersuchung beginnen!</string>
    <string name="send_collegue_yes">Ja, Kollegen losschicken</string>
    <string name="send_collegue_no">Nein, anderen Ort wählen</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="zeroMap">Es wurden noch keine Hinweise zum Aufenhaltsort des Täters gefunden!</string>
    <string name="hintMap">Der Aufenthaltort des Täters konnte dank der gefundenen Hinweise auf diesen Bereich eingeschränkt werden.</string>
    <string name="new_hintMap">Der Aufenthaltort des Täters konnte dank der gefundenen Hinweise weiter eingeschränkt werden.</string>
    <string name="nonew_hintMap">Du hast bereits sämtliche Hinweise zum Aufenthaltsort gefunden. Wähle einen anderen Hinweis aus.</string>
    <string name="title_activity_char">charActivity</string>
    <string name="nohint_weapon">Die Tatwaffe wurde bereits gefunden. Wähle einen anderen Hinweis aus.</string>
    <string name="nohint_weaponlocation">Die Tatwaffe wurde bereits untersucht. Finde andere Hinweise.</string>
    <string name="benutzerdaten">In diesem Menü kannst du deine Spielerdaten aktualisieren</string>
    <string name="info">App-Info</string>
    <string name="infoMsg">ViennaCop ist ein Studenten-Projekt, welches im Rahmen des HCI-Seminars (SS2015) der Forschungsgruppe DECO (INSO) an der TU Wien entstanden ist. \n\nTeam-Mitglieder: \n\tAlex Brandner\n\tAmer Salkovic\n\tMichael Traxler\n\tMario Vorstandlechner\n\n</string>
    <string name="linkBrushes">Für die Phantombilder wurden folgende Photoshop-Brushes verwendet:\n\tEyes Brush Set Vol. 2\n\t\thttp://goo.gl/wUVBOn\n\tHair Brushes CS+\n\t\thttp://goo.gl/YjRJTp</string>
    <string name="stat">Statistik</string>
    <string name="statRateMsg">Aufklärungsrate</string>
    <string name="solvedRateMsg">Gelöste Fälle</string>
    <string name="missedRateMsg">Ungelöste Fälle</string>
    <string name="featureRateMsg">Gefundene Tätermerkmale</string>
    <string name="mapRateMsg">Gefundene Ortshinweise</string>
    <string name="abort">Willst du den Fall wirklich abbrechen?</string>
    <string name="choose_suspect">Wir konnten die Verdächtigen eingrenzen. Wähle anhand deiner gesammelten Hinweise
        den/die TäterIn. Bist du dir unsicher, dann suche weitere Hinweise und komm später wieder.</string>
    <string name="new_featurehint">Das Aussehen des Täters konnte weiter ausgeforscht werden.</string>
    <string name="nonew_featurehint">Du hast bereits sämtliche Hinweise zum Aussehen des Täters gefdunden. Wähle einen anderen Hinweis aus.</string>
    <string name="end_case_positive">Glückwunsch! Du hast den richtigen Verdächtigen gewählt, er hat die Tat gestanden.
    Weiter so!</string>
    <string name="end_case_negative">Es hat sich leider herausgestellt dass du die falsche Person beschuldigt hast, der wirkliche
    Täter hat in der Zwischenzeit erneut zugeschlagen und wurde dabei von Kollegen festgenommen. Pass beim nächsten Mal besser auf!</string>
    <string name="sharedPref">MySharedPref</string>
    <string name="anim_start">Wenn du einen neuen Fall aufnimmst, musst du zuerst den Tatort aufsuchen (Fadenkreuz-Symbol). Geh hin und du erhältst den ersten Täterhinweis.</string>
    <string name="anim_zero">Danach kannst du Hinweispunkte in der Umgebung aufsuchen. Diese werden aktiviert sobald du dich in der Nähe befindest. Dort erhältst du neue Hinweise über den Standort oder das Aussehen des Täters.</string>
    <string name="anim_first">Mit diesem Button kannst du einen Kollegen zu einem Punkt deiner Wahl schicken. Nach 15 Minuten erhältst du wichtige Hinweise zu deinem Fall.</string>
    <string name="anim_second">Falls die Tatwaffe auftaucht, erhältst du mehrere Täterhinweise auf einmal sobald du sie untersucht hast. Du musst dazu zum Ort gehen wo sie gefunden wurde.</string>
    <string name="anim_third">Wenn du auf das Kartensymbol drückst, wird dir der Radius angezeigt in dem sich der Täter versteckt hält.</string>
    <string name="anim_thirdb">Sobald du sämtliche Hinweise zum Täterstandort gefunden hast, musst du nur noch das Versteck im eingrenzenden Radius finden. Wenn du in der Nähe bist, erscheint das unten gezeigte Symbol.</string>
    <string name="anim_fourth">Hier kannst du dir alle gesammelten Hinweise zum Aussehen des Täters noch einmal ansehen. Außerdem wird automatisch eine Liste von Verdächtigen generiert sobald du das Versteck des Täters gefunden hast. Dadurch kannst du den wahren Täter identifizieren.</string>
    <string name="anim_fifth">Achtung! Du solltest erst eine Entscheidung fällen sobald du dir wirklich sicher bist und genügend Hinweise gesammelt hast. Der Täter kann weiter sein Unwesen treiben falls du den Falschen verhaftest!</string>
    <string name="start_case_info">Gehe zum Tatort und beginne den Fall</string>
    <string name="next">\u0020Nächster Tipp\u0020</string>
    <string name="closeTut">Tutorial schließen</string>
    <string name="close">Schließen</string>
    <string name="logHeader">Log</string>
    <string name="blank">\u0020</string>
    <string name="murderWeaponFoundMsg">Die Tatwaffe wurde bereits gefunden!</string>
    <string name="collectWeapon">Gehe zum Ort wo die Tatwaffe gefunden wurde und erhalte drei zusätzliche Täterhinweise!</string>
    <string name="allMapHintsFoundMsg">Alle Hinweise zum Aufenthaltsort des Täters wurden bereits gefunden!</string>
    <string name="allFeaturesFoundMsg">Alle Hinweise zum Aussehen des Täters wurden bereits gefunden!</string>
</resources>