<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/featureView"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curve_shape_black"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:id="@+id/cd_txt_desc"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:id="@+id/infos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cd_img_weapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@drawable/info_weapon" />

        <ImageView
            android:id="@+id/cd_img_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@drawable/info_map" />

        <ImageView
            android:id="@+id/cd_img_feature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:src="@drawable/info_feature" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/send_collegue_no"
            android:textColor="@color/violett"
            android:onClick="sendNot"
            android:background="@drawable/btn_android"
            android:id="@+id/cd_btn_abort" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="@string/send_collegue_yes"
            android:textColor="@color/violett"
            android:background="@drawable/btn_android"
            android:id="@+id/cd_btn_send" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cd_btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_android"
            android:onClick="closeDialog"
            android:text="@string/close"
            android:textColor="@color/violett" />

    </LinearLayout>
</LinearLayout>